# sn-api-helper-mcp

./: .gitignore  README.md  manifest.json  pyproject.toml
.github/workflows/: mcp-validate.yml  release-mcpb.yml
scripts/: validate_mcp_spec.py
src/sn_api_helper_mcp/: cache.py  cli.py  completions.py  mcpb_serve.py  response_formatter.py  server.py
src/sn_api_helper_mcp/prompts/: __init__.py  integration.py
src/sn_api_helper_mcp/resources/: __init__.py  api_reference.py
src/sn_api_helper_mcp/tools/: __init__.py  get_skills_info.py
tests/: __init__.py  test_cache.py  test_formatter.py  test_tool.py
