[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sn-api-helper-mcp"
version = "1.3.0"
description = "MCP server for SignNow API helper tools — documentation, code examples, and integration guidance for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ShadowRock" }
]
dependencies = [
  "mcp>=1.20.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sn_api_helper_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
